--- a/Dark Days/Dark Days/HealthView.xib
+++ b/Dark Days/Dark Days/HealthView.xib
@@ -8,12 +8,12 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="HealthView" customModule="Dark_Days" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="70" height="120"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="np5-LZ-M5A">
-                    <rect key="frame" x="139" y="0.0" width="42" height="24"/>
+                    <rect key="frame" x="14" y="0.0" width="42" height="24"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="42" id="Y5r-cS-Qar"/>
                         <constraint firstAttribute="width" secondItem="np5-LZ-M5A" secondAttribute="height" multiplier="1.75:1" id="jOT-Xf-Bjd"/>
@@ -21,25 +21,25 @@
                     <state key="normal" image="UpArrow"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="exO-Jm-edf">
-                    <rect key="frame" x="139" y="104" width="42" height="24"/>
+                    <rect key="frame" x="14" y="96" width="42" height="24"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="42" id="Giw-Lx-nCR"/>
                         <constraint firstAttribute="width" secondItem="exO-Jm-edf" secondAttribute="height" multiplier="1.75:1" id="itv-oy-1AV"/>
                     </constraints>
                     <state key="normal" image="DownArrow"/>
                 </button>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HeartIcon" translatesAutoresizingMaskIntoConstraints="NO" id="UIp-kq-ydM">
-                    <rect key="frame" x="120" y="24" width="80" height="80"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HeartIcon" translatesAutoresizingMaskIntoConstraints="NO" id="UIp-kq-ydM">
+                    <rect key="frame" x="0.0" y="25" width="70" height="70"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="80" id="QJA-Vf-HWv"/>
+                        <constraint firstAttribute="width" constant="70" id="QJA-Vf-HWv"/>
                         <constraint firstAttribute="width" secondItem="UIp-kq-ydM" secondAttribute="height" multiplier="1:1" id="SRl-bd-fv1" userLabel="aspect = 1:1"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="99/99" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="foW-fO-4r1">
-                    <rect key="frame" x="139" y="48.5" width="42" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="99/99" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="foW-fO-4r1">
+                    <rect key="frame" x="10" y="44" width="50" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="KwF-vy-5dv"/>
-                        <constraint firstAttribute="width" constant="42" id="mHt-Y9-6jB"/>
+                        <constraint firstAttribute="width" constant="50" id="vuj-IM-R1f"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -48,16 +48,25 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstAttribute="bottom" secondItem="exO-Jm-edf" secondAttribute="bottom" id="59H-qL-Bp3"/>
+                <constraint firstItem="foW-fO-4r1" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="9xf-7w-IZB"/>
+                <constraint firstAttribute="trailing" secondItem="foW-fO-4r1" secondAttribute="trailing" id="Gr6-lL-vzC"/>
+                <constraint firstItem="UIp-kq-ydM" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="JC4-iv-ixu"/>
                 <constraint firstItem="foW-fO-4r1" firstAttribute="centerY" secondItem="UIp-kq-ydM" secondAttribute="centerY" constant="-5" id="P3m-u2-6ix"/>
-                <constraint firstItem="exO-Jm-edf" firstAttribute="top" secondItem="UIp-kq-ydM" secondAttribute="bottom" id="QbN-gW-RG9"/>
                 <constraint firstItem="foW-fO-4r1" firstAttribute="centerX" secondItem="UIp-kq-ydM" secondAttribute="centerX" id="bpX-R3-duy"/>
                 <constraint firstItem="np5-LZ-M5A" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="fae-gO-hc4"/>
                 <constraint firstItem="exO-Jm-edf" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="llJ-NK-m0k"/>
                 <constraint firstItem="np5-LZ-M5A" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="o0K-GV-mJZ"/>
+                <constraint firstItem="UIp-kq-ydM" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="tUM-m8-eAB"/>
                 <constraint firstItem="UIp-kq-ydM" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="w7v-Gg-EGA"/>
-                <constraint firstItem="UIp-kq-ydM" firstAttribute="top" secondItem="np5-LZ-M5A" secondAttribute="bottom" id="zyJ-4e-4X9"/>
             </constraints>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="9xf-7w-IZB"/>
+                    <exclude reference="Gr6-lL-vzC"/>
+                </mask>
+            </variation>
         </view>
     </objects>
     <resources>
