--- a/Dark Days/Dark Days/HeroViewController.storyboard
+++ b/Dark Days/Dark Days/HeroViewController.storyboard
@@ -155,17 +155,49 @@
                                     <segue destination="8oN-n2-f1X" kind="embed" id="bXH-Jy-mfX"/>
                                 </connections>
                             </containerView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="ZjN-eG-abz">
+                                <rect key="frame" x="197" y="40" width="107" height="50"/>
+                                <subviews>
+                                    <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MXQ-VZ-KT4">
+                                        <rect key="frame" x="0.0" y="0.0" width="29" height="50"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Coins" translatesAutoresizingMaskIntoConstraints="NO" id="raQ-w8-D9P">
+                                        <rect key="frame" x="34" y="0.0" width="35" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="35" id="fR7-mD-jnT"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IIW-ZV-Wic">
+                                        <rect key="frame" x="74" y="0.0" width="0.0" height="50"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8SM-rq-Hq9">
+                                        <rect key="frame" x="79" y="0.0" width="28" height="50"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="8SM-rq-Hq9" firstAttribute="width" secondItem="MXQ-VZ-KT4" secondAttribute="width" id="8Hk-3E-qTz"/>
+                                    <constraint firstAttribute="height" constant="50" id="INB-xQ-6Em"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="3ao-dt-idE" firstAttribute="top" secondItem="lDs-B1-mLe" secondAttribute="top" id="2xu-sr-5sJ"/>
                             <constraint firstItem="lDs-B1-mLe" firstAttribute="top" secondItem="H5F-ib-KGt" secondAttribute="top" id="4Jr-Ia-U2f"/>
                             <constraint firstItem="H5F-ib-KGt" firstAttribute="top" secondItem="BYk-lY-vIi" secondAttribute="bottom" constant="20" id="4gk-va-UAW"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ZjN-eG-abz" secondAttribute="trailing" id="7n5-KW-1Wh"/>
                             <constraint firstItem="H5F-ib-KGt" firstAttribute="trailing" secondItem="n0R-I4-t9L" secondAttribute="leading" id="94O-f0-e4s"/>
                             <constraint firstItem="3ao-dt-idE" firstAttribute="width" secondItem="3ao-dt-idE" secondAttribute="height" multiplier="1:1" id="K1s-up-HCP"/>
                             <constraint firstItem="BdS-UO-7gL" firstAttribute="centerX" secondItem="dmw-nJ-ihR" secondAttribute="centerX" id="Ltg-cg-eHd"/>
+                            <constraint firstItem="ZjN-eG-abz" firstAttribute="leading" secondItem="lDs-B1-mLe" secondAttribute="trailing" constant="10" id="O3m-Vq-h4L"/>
                             <constraint firstItem="lDs-B1-mLe" firstAttribute="leading" secondItem="3ao-dt-idE" secondAttribute="trailing" constant="40" id="PLh-s8-wGS"/>
                             <constraint firstItem="6MH-he-zNu" firstAttribute="centerX" secondItem="H5F-ib-KGt" secondAttribute="centerX" id="Ssj-et-8wE"/>
+                            <constraint firstItem="lDs-B1-mLe" firstAttribute="top" secondItem="ZjN-eG-abz" secondAttribute="top" id="VMn-ai-d84"/>
                             <constraint firstItem="LMS-Zp-1oA" firstAttribute="trailing" secondItem="H5F-ib-KGt" secondAttribute="trailing" constant="25" id="VbP-AI-cQg"/>
                             <constraint firstItem="BdS-UO-7gL" firstAttribute="top" secondItem="H5F-ib-KGt" secondAttribute="bottom" constant="12" id="W8U-aU-9tf"/>
                             <constraint firstItem="BdS-UO-7gL" firstAttribute="width" secondItem="dmw-nJ-ihR" secondAttribute="width" id="Yj5-hv-Kxq"/>
@@ -194,6 +226,7 @@
                         <outlet property="bootsButton" destination="tWM-Zd-iTa" id="3dm-8e-mNb"/>
                         <outlet property="chestButton" destination="6MH-he-zNu" id="VWx-dq-PxJ"/>
                         <outlet property="collectionViewFlowLayout" destination="pTd-Os-Ulj" id="kLT-c8-klg"/>
+                        <outlet property="goldLabel" destination="IIW-ZV-Wic" id="ucv-0V-3Wv"/>
                         <outlet property="helmetButton" destination="lDs-B1-mLe" id="ywF-Jv-1Dz"/>
                         <outlet property="leftHandButton" destination="LMS-Zp-1oA" id="a3l-Dp-xRc"/>
                         <outlet property="rightHandButton" destination="58g-mR-vui" id="Q4S-cD-MOL"/>
@@ -288,6 +321,7 @@
         <image name="Accessory" width="40" height="40"/>
         <image name="Boots" width="40" height="40"/>
         <image name="Chest" width="40" height="40"/>
+        <image name="Coins" width="170" height="170"/>
         <image name="DownArrow" width="14" height="8"/>
         <image name="HeartIcon" width="100" height="100"/>
         <image name="Helmet" width="40" height="40"/>
