--- a/Dark Days/Dark Days/InfoCell.xib
+++ b/Dark Days/Dark Days/InfoCell.xib
@@ -17,7 +17,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" usesAttributedText="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g8V-3x-kFQ">
-                        <rect key="frame" x="13" y="34" width="294" height="30"/>
+                        <rect key="frame" x="13" y="8" width="294" height="30"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <attributedString key="attributedText"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -29,29 +29,19 @@
                             <constraint firstAttribute="width" secondItem="cF2-dM-VSW" secondAttribute="height" multiplier="1:1" id="pUa-iP-3vf"/>
                         </constraints>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bwb-Ib-sok">
-                        <rect key="frame" x="77" y="8" width="235" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="cF2-dM-VSW" firstAttribute="top" secondItem="wI4-qv-xSV" secondAttribute="topMargin" id="1o4-wG-NaT"/>
                     <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="g8V-3x-kFQ" secondAttribute="bottom" constant="5" id="6FS-JO-PM1"/>
                     <constraint firstItem="cF2-dM-VSW" firstAttribute="leading" secondItem="wI4-qv-xSV" secondAttribute="leadingMargin" constant="5" id="Al4-Nw-6FU"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="bwb-Ib-sok" secondAttribute="trailing" id="D44-hc-ZTe"/>
                     <constraint firstItem="g8V-3x-kFQ" firstAttribute="leading" secondItem="wI4-qv-xSV" secondAttribute="leadingMargin" constant="5" id="HKe-9h-JcS"/>
-                    <constraint firstItem="g8V-3x-kFQ" firstAttribute="top" secondItem="bwb-Ib-sok" secondAttribute="bottom" constant="5" id="NxN-YI-o8c"/>
                     <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="cF2-dM-VSW" secondAttribute="bottom" constant="5" id="O7U-MH-Qyo"/>
                     <constraint firstAttribute="trailingMargin" secondItem="g8V-3x-kFQ" secondAttribute="trailing" constant="5" id="Pim-D3-X2N"/>
-                    <constraint firstItem="bwb-Ib-sok" firstAttribute="leading" secondItem="cF2-dM-VSW" secondAttribute="trailing" constant="8" id="WQa-ii-3DA"/>
-                    <constraint firstItem="cF2-dM-VSW" firstAttribute="top" secondItem="bwb-Ib-sok" secondAttribute="top" id="aXL-32-LdB"/>
+                    <constraint firstItem="g8V-3x-kFQ" firstAttribute="top" secondItem="cF2-dM-VSW" secondAttribute="top" id="sNT-bI-k7Z"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="infoImageButton" destination="cF2-dM-VSW" id="EgM-tf-Uf6"/>
-                <outlet property="infoNameLabel" destination="bwb-Ib-sok" id="Zpw-WU-RjU"/>
                 <outlet property="infoTextView" destination="g8V-3x-kFQ" id="Y1a-ZQ-fLe"/>
             </connections>
             <point key="canvasLocation" x="584" y="263"/>
